--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,3 +1,14 @@
 .body-wrapper>.container-fluid, .body-wrapper>.container-lg, .body-wrapper>.container-md, .body-wrapper>.container-sm, .body-wrapper>.container-xl, .body-wrapper>.container-xxl {
     max-width: unset !important;
 }
+
+.body-wrapper {
+    min-height: 100vh;
+}
+
+#footer-content {
+    bottom: 0;
+    position: absolute;
+    transform: translateX(-50%);
+    left: 50%;
+}
